--- a/html/037. Dehidrasi (08-06-2024)/d.html
+++ b/html/037. Dehidrasi (08-06-2024)/d.html
@@ -96,6 +96,19 @@
                 44 hari bertahan. Apa iya ya, ini firasat kalo aku akan 
                 segera mati? Tapi hamba belum siap mati ya Allah...
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Aku kayaknya dibodohin github ngga sih. Padahal udah aku 
+                cek dan hitung sebenar-benarnya, masak selalu salah sih.
+                Coba aku ganti browser dulu deh. Ahhh, jangan sampai 
+                waktuku habis cuma buat main teka-teki sama github, 
+                hmmm. Dahlah, aku nyerah aja, capek. Masak disuruh 
+                dengerin sound-sound aneh, sebelumnya diminta dengerin 
+                suara kucing, anjing, serigala. Dah, ngga jadi bikin 
+                akun github lagi.
+            </p>
         </div>
     </div>
 </body>
