--- a/html/038. Terakhir (09-06-2024)/terakhir.html
+++ b/html/038. Terakhir (09-06-2024)/terakhir.html
@@ -40,6 +40,12 @@
                 nasinya, hahaha. Ahhh random banget, aku mau mandi 
                 dulu deh, wkwkwk.
             </p>
+            <p>
+                Ini kayaknya ngga jadi deh wkwkwk. Bentar bentar, 
+                pantau grup dulu. Ngga papa juga sih, aku juga udah 
+                kenyang makan pas buka puasa, tapi sayang banget 
+                kalo ngga jadi, ya ngga sih.
+            </p>
         </div>
     </div>
 </body>
