--- a/html/038. Terakhir (09-06-2024)/terakhir.html
+++ b/html/038. Terakhir (09-06-2024)/terakhir.html
@@ -46,6 +46,28 @@
                 kenyang makan pas buka puasa, tapi sayang banget 
                 kalo ngga jadi, ya ngga sih.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Aku emang tim liat liat doang banget ngga sih, wkwkwk. 
+                BNN, Badan Negok Nengok. Yang bersuara Sit*ah doang 
+                hahaha. Apalagi semenjak kak Jul sama kak Dil* kemaren 
+                pindah bilek, dan si Ayu juga udah lama pindah, jadi kami 
+                mencar-mencar banget. Karena Kak jul sama kak Dil* itu 
+                kan kabag, jadi mereka itu pindah ke bilek khusus kabag 
+                di sebelah sana.
+            </p>
+            <p>
+                Btw, setelah idul fitri kemaren kak Jul nawarin buat jadi 
+                kabag, akunya ngga mau. Ya aku kan cuman beberapa bulan 
+                lagi disini, dan palingan ya nunggu-nunggu jadwal doang, 
+                kalo jadi kabag kan nanggung banget, padahal akunya mau 
+                fokus ngaji untuk saat-saat terakhir ini. Yekann, kalo 
+                kabag kami tuh kayak harus mantau-mantau orang, ngecek 
+                ke bilek juga pas lagi ngaji, jadinya malah ganggu fokus 
+                aku yang maunya ngaji aja, hahaha.
+            </p>
         </div>
     </div>
 </body>
