--- a/html/038. Terakhir (09-06-2024)/terakhir.html
+++ b/html/038. Terakhir (09-06-2024)/terakhir.html
@@ -66,7 +66,13 @@
                 fokus ngaji untuk saat-saat terakhir ini. Yekann, kalo 
                 kabag kami tuh kayak harus mantau-mantau orang, ngecek 
                 ke bilek juga pas lagi ngaji, jadinya malah ganggu fokus 
-                aku yang maunya ngaji aja, hahaha.
+                aku yang maunya ngajinya aja, hahaha.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Yess, I got it. Thank you github!
             </p>
         </div>
     </div>
