--- a/html/038. Terakhir (09-06-2024)/terakhir.html
+++ b/html/038. Terakhir (09-06-2024)/terakhir.html
@@ -9,9 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <!-- Abaikan video ini, karena isinya muka-muka ku semua,
-             but no matter, I love my self -->
-            <video src="tr.mp4" autoplay controls loop></video>
+            <video src="keep.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Terakhir</h1>
@@ -73,6 +71,15 @@
             </p>
             <p>
                 Yess, I got it. Thank you github!
+            </p>
+            <p>
+                18.45
+            </p>
+            <p>
+                Kamu tau, satu-satunya hal yang ngga akan mengecewakan 
+                kalo di tunggu adalah nunggu buka puasa, wkwkwk. Ya 
+                karena mau selama apapun nunggu, pada akhirnya akan
+                berbuka juga, wkwkwk.
             </p>
         </div>
     </div>
