--- a/html/038. Terakhir (09-06-2024)/terakhir.html
+++ b/html/038. Terakhir (09-06-2024)/terakhir.html
@@ -81,6 +81,26 @@
                 karena mau selama apapun nunggu, pada akhirnya akan
                 berbuka juga, wkwkwk.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Ini kenapa tiba-tiba malah jadi makan-makan sih. Mana 
+                aku udah kekenyangan banget, + kebanyakan minum air
+                wkwkwk. Apa aku ngga jadi segera mati karena ginjal 
+                ya? Karena aku udah bisa puasa lagi. Hmmm semoga. 
+                Tapi aku minum banyak banget kemaren, sampe perut 
+                kembung, kebelet buang air kecil terus-terusan 
+                dan aku ngga bisa tidur hampir jam 2 dini hari.
+            </p>
+            <p>
+                Bingung mau gimana, minum air banyak salah, minum 
+                air dikit lebih salah, dan bahkan minum air normal 
+                masih salah aja. Tapi kalo dipikir-pikir kenapa 
+                sesepele ini ya masalah hidupku, bingung juga wkwkwk. 
+                Ahhh bodoamatlah, hidup emang membingungkan, ngga 
+                bingung lagi kalo udah di surga.
+            </p>
         </div>
     </div>
 </body>
