--- a/html/039. Prepare (11-06-2024)/pr.html
+++ b/html/039. Prepare (11-06-2024)/pr.html
@@ -27,7 +27,7 @@
             <p>
                 Aku dekdekan bangettt, takuuut. Terus ya aku 
                 ke kampus kemaren buat ngasih undangan, baru 
-                siap aku kasih ke pak hafizh, tinggal tiga dosen 
+                siap aku kasih ke pak haf*zh, tinggal tiga dosen 
                 lagi. Hari ini aku mau kasih sisanya.
             </p>
             <p>
@@ -46,6 +46,112 @@
                 seberapa proffesionalnya aku, wkwkwk. Tapi ya mungkin 
                 ngga akan datang sih, ngga papa, untuk melatih mentalku 
                 bahwa kita proffesional, wkwkwk.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Akuu udah undang orang-orang, wkwkwk. Jadii, jadwalku 
+                kayaknya di geser dikit deh, karena pak Fik*y ngga 
+                bisa jam 9 pagi, bisanya setengah sebelas gitu. Mana 
+                aku udah terlanjur undang semua kawan dayah dan kawan 
+                kkn jam 11 siang lagi argghhh. Tapii, kawan IT aku 
+                undangnya jam 13.30, mungkin pada dateng jam-jam 
+                2 atau jam 3 siang.
+            </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Btw, ahhh, jawaban yang salah. Masak main siap siap aja. 
+                Insya Allah kek. Mana pake segala undang aku dadakan 
+                lagi, aku sengaja ngga undang dari malam kemaren 
+                biar ngga diundang balik. Malah dibalikin. Aku tau, 
+                sebenernya dia ngga mau undang aku, cuman biar ngga 
+                enak aja. Ahhh salah strategi aku, harusnya besok 
+                aja ngirim undangannya. Arghh. Astaghfirullah.
+            </p>
+            <p>
+                Jujur ya, kenapa aku undang mereka-mereka, aku cuman 
+                share undangan itu ke cowok-cowok kkn, sama anak IT 
+                tiga orang doang. Kenapaa, aku ada janji sama Rais*al, 
+                jadi kan pas sempro dia reply sg aku, kayak kok ngga 
+                diundang sih? Ya aku spontan jawab, 'Iya ngga undang 
+                orang soalnya, nanti ya pas sidang.' Nahh itu, aku 
+                keinget janji norak ku itu, wkwkwk. Walaupun dia 
+                pasti ngga dateng, seenggaknya aku udah undang, yekan.
+                Dan ngga mungkin juga kan aku cuman undang si Rais*al 
+                itu doang. Jadi aku undanglah dua orang lagi, kawan 
+                dayah aku si Muk*al sama Ri*zan.
+            </p>
+            <p>
+                Sebenernya, selain itu aku juga kepo aja. Jadi aku 
+                kan bentar lagi mau pulang, dan aku juga ngga mau 
+                kan terus-terusan mikirin bapak sebelah, jadi aku 
+                mau liat, kalo misalkan aku undang dia dateng ngga. 
+                Gituu, wkwkwk. Aku pengennya dia ngga datang, jadi 
+                kayak aku bisa lebih gampang move onnya. Gini loh, 
+                aku bisa mikir kayak, 'Ya dia aja ngga peduli tuh 
+                sama aku, ngapain aku mikirin dia.' Nahh gitu, jadi 
+                kalo anda membaca ini, tolong bantu saya, jangan 
+                datang yaa. Terima kasih.
+            </p>
+            <p>
+                Aku mau ceritaa, dulu kan aku ngerasa kayak temennya 
+                bapak sebelah, si A*lia itu kok nyambung terus sama 
+                githubku sih. Apa dia beneran tulus gitu? Atau cuman 
+                iseng aja? Atau target dia justru bukan aku, cuman ya 
+                aku jadi inspirasinya aja kadang-kadang? 
+            </p>
+            <p>
+                Nahh, menyadari, memikirkan, dan menganalisis serta 
+                kepo terhadap hal itu, aku ngetes dia. "Ini orang
+                beneran suka aku emangnya?" Tapi aku ngga suka dia, 
+                dan aku ngga akan pernah bisa suka. Jadi, takutkan 
+                nyakitin orang kalo dia emang tulus. Terus aku 
+                ngetes orangnya deh, aku chat lewat wa, entah apa 
+                topiknya aku lupa, untuk ngeliat gimana responnya 
+                dia aja sih maksudku. Dan kamu bisa tebak? Responnya 
+                anyep (menurutku ya, wkwkwk), entah orangnya emang 
+                cuek atau gimana. Dan karena itu, dalam hatiku kayak 
+                "Dari responnya, dia terlihat ngga suka aku. Yess 
+                alhamdulillah kalo gitu. Jadi ya apapun isi sg nya 
+                dia, ya dia emang ngga suka aku jadi hal itu tidak 
+                ditujukan untuk aku sama sekali. Dan aku ngga perlu 
+                pusing apalagi ngga enak sama dia."
+            </p>
+            <p>
+                Hahaha, gitu caranya biar ngga ribet sama pikiran 
+                sendiri, mending langsung eksekusi yekann. Itu udah 
+                lama sih. Waktu masa-masa ngurus seminar KP kalo 
+                ngga salah.
+            </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Arghh, balik lagii. Aku bingung besok. Kalo aku 
+                dateng males banget ngga sih, ntar ketemu ceweknya 
+                zancok, masak tiba-tiba ada aku, kan jadi ngga 
+                enak. Jadi kan kemaren setelah si In*an itu ngasih 
+                buket waktu sempronya zancok, tiba-tiba dia post 
+                galau-galau, kukira kau rumah lah, apa lah, kayaknya 
+                ya menurut analisa aku si zancok pasti upload foto 
+                yang di tag ceweknya, jadinya si in*an ini ngerasa 
+                kecewa. Tapii, aku ngga tau siapa, karena aku ngga 
+                liat sg zancok, nyesel ngga sih ngga kepoin wkwkwk.
+                Jangan-jangan anak kelompok kknnya yang cantik.
+                Hahaha tapi bodo amat lah.
+            </p>
+            <p>
+                Tapii, kalo aku ngga datang dan dia tiba-tiba datang 
+                ke sidangku jadinya malah aku yang ngga enak sama dia. 
+                Ahh serba salah deh. Arghh bingung, mau jawab apa sama 
+                dia, bingungg. Dan kalo aku datang, aku bawa apa dong, 
+                ahhh, aku isi snack coklat kesukaan aku semua aja kali 
+                ya? Ahhh tapi aku ngga mau datang. Dia juga ngapain sih 
+                undang akuu cuma gara-gara ngga enak, ahhh aku jangan 
+                diundang dong. Cancel ngga!
             </p>
         </div>
     </div>
