--- a/html/040. Bismillah besok (12-06-2024)/bb.html
+++ b/html/040. Bismillah besok (12-06-2024)/bb.html
@@ -32,6 +32,37 @@
                 dia udah pulang, atau dibelakang gedung, wkwkwk. Oke, 
                 aku siap-siap dulu deh.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Hahahaha, aku kan ke kampus. Terus aku sengaja parkir 
+                motor jauh biar bisa mantau dulu. Aku liat-liat kok 
+                ada kawan gengnya si anu. Anunya ngga keliatan sih. 
+                Terus dalam hati, "Mati aku, rupanya masih ada dia 
+                woee." Aku jalan ke gedung, ehh dia bukannya di belakang
+                gedung malah didepan dan duduk menghadap pintu masuk. 
+                Hadeuhhh, kacau.
+            </p>
+            <p>
+                Aku kan emang udah siapin paperbag isi snack coklat, 
+                wkwkwk. Mau langsung kasih ngga berani hahaha, disitu 
+                banyak cowok temennya dia. Jadi ya aku masuk ke adm 
+                dulu deh buat ngasih berkas pengurusan ijazah.
+            </p>
+            <p>
+                Setelah itu, akhirnya aku ngasih. Aku ucapin selamat. 
+                Dia malah cengar-cengir doang woi, minimal ajak poto 
+                bang, nanggung amat wkwkwk. Dahlah, mendingan langsung 
+                pulang aja dah akunya. 
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Okey, ini kesalahan teknis dari aku, ngga papa. Besok 
+                semoga dia ngga datang. Biar rencanaku tetap mulus.
+            </p>
         </div>
     </div>
 </body>
