--- a/html/040. Bismillah besok (12-06-2024)/bb.html
+++ b/html/040. Bismillah besok (12-06-2024)/bb.html
@@ -63,6 +63,57 @@
                 Okey, ini kesalahan teknis dari aku, ngga papa. Besok 
                 semoga dia ngga datang. Biar rencanaku tetap mulus.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Aku kepikiran deh, aku kan undang anak kkn, nahh mereka 
+                pada reply kasih semangat atau doain atau bilang insya 
+                Allah. Cuman kok ada yang agak gimana gitu ya. Jadi kan 
+                kelompok kami ada 5 yang cowok dan 10 yang cewek, aku 
+                undang lah semua yang cowok dan 7 yang cewek. Ada satu
+                yang cowok namanya Rav* dia itu dulu pas kkn baik banget, 
+                terus kayak termasuk agak sering ngajak ngomong sama aku 
+                daripada yang lain. Nanyain bisa edit video lah, remove 
+                background lah, sampe nanyain gunting kuku padahal sama 
+                aku ngga ada.
+            </p>
+            <p>
+                Kalo yang lain, kayak si Ra*a, Udi* sama bang Bim*, 
+                mereka reply loh pesanku, 'insya allah datang nisa', 
+                'kalo ngga ada halangan insya allah datang.' Nah yang 
+                anehnya si Ra*i ini kok no respon ya? Terakhir dia 
+                jadi aneh setelah aku kasih motivasi. Apa dia marah 
+                dan tersinggung ya sama kalimat motivasi aku? Hah?
+                Tapi perasaan aku balasnya bagus kok, ngga menyinggung 
+                sih seharusnya.
+            </p>
+            <p>
+                Jadi beberapa hari sebelum pulang kkn dia wa aku, ya 
+                aku balas lah dengan long text isinya motivasi. Wa nya 
+                gini, aku copas aja dah capek ngetik.
+                "Sa , aku pengen nanya tapi janji jngan bilang siapa²"
+
+                "Gini sa, kita kan hampir1 bln bekwn dan ko pun juga 
+                tau kek mana kepribadian kwn masing² kn, aku mau tanya 
+                sama mu plus minus tentang diriku di klompk ini, karna 
+                aku slalu overthinking aj, aku mau dengar pendapat 
+                mengenai itu , 🙏"
+
+                "menurut mu aku baik nya dimana dan buruknya juga di mana"
+            </p>
+            <p>
+                Gini, ini maksudnya minta motivasi kan? Apa jawaban 
+                motivasiku ngga cocok ya? Duhh, akunya jadi malu sendiri. 
+                Gimana dong, aku salah jawab, sampe orangnya tersinggung.
+                Mau copas jawabanku, malu ah. Jawabanku salah, jadi ngga 
+                enak. Entah motivasi apa yang dia butuhkan, dan ngapain 
+                tanya pendapatku, aneh banget. Arghhh bodoamat lah. 
+                Terserah anda, mau marah silahkan lah.
+            </p>
+            <p>
+                Ahh, kayaknya aku harus belajar memotivasi lagi deh.
+            </p>
         </div>
     </div>
 </body>
