--- a/html/041. The day (13-06-2024)/the-day.html
+++ b/html/041. The day (13-06-2024)/the-day.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="sidang.mp4" autoplay controls loop></video>
+            <video src="sidang-day.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>The day</h1>
@@ -24,6 +24,29 @@
             <p>
                 Tapi sampe sekarang satupun dosen belum sampe. 
                 Hmmm.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                22.25
+            </p>
+            <p>
+                Heiii, apa iniii. Dia membuat dirinya lulus verifikasi
+                hahaha. Aku mikirnya dia udah pulang tadi pas aku keluar 
+                sidang, rupanya masih disitu woii. Ahh gimana cara move 
+                onnya kalo giniii, tolonggg. ASTAGHFIRULLAH. Mana aku 
+                keliatan pendek di samping dia, yang begini-begini yang 
+                hamba cari ya Allah. Wkwkwk.
+            </p>
+            <p>
+                Dan di post woii. Terus aku bingung mau reply apa, takut 
+                ntar geger perdayahan ini kalo aku repost tag-an dia. Aku 
+                pertama liat dia post itu, histeris tauu. Terus aku tunjukin 
+                ke adek bilek aku. Aku bingung mau bilang apa, akhirnya 
+                aku suruh dia, "Kiban ta peugah nyooo. Ka balah at dek."
+                Jadinya dia yang balas kalimat pertama itu hahaha. Maaciii 
+                dek kuu.
             </p>
         </div>
     </div>
