--- a/html/042. Hah (14-06-2024)/hah.html
+++ b/html/042. Hah (14-06-2024)/hah.html
@@ -61,6 +61,38 @@
                 memang tempatnya bingung, ngga bingung lagi kalo udah di 
                 surga.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                22.37
+            </p>
+            <p>
+                Aku dirumah lagi gabut, terus kepikiran baca-baca tulisan 
+                githubku jaman dulu, wkwkwk. Ini yang punya tahun 2022,
+                hahaha random banget ngga sih. 
+            </p>
+            <p>
+                Part sad nya emang beneran curhat langsung sama pelaku, 
+                wkwkwk. Entah waktu nulis ini aku udah engeh atau belum, 
+                lupaa. Tapii, kalo sekarang gimana ya? Akunya juga ngga 
+                tau, bingung juga mau cari tau gimana. Hmmm, aku sedang 
+                mikir wkwkwk. Tapi kalo kejadian lagi, malu banget akuu, 
+                dan beneran kayaknya aku harus pindah benua dah.
+            </p>
+            <p>
+                Dan sekarang sih aku ngetawain diriku yang sad ituu, 
+                wkwkwk. Dan bisa-bisanya aku masih stuck suka sama orang 
+                yang sama, mungkin aku sudah sangat gila, hahaha. Nisaa 
+                oh nisaaa, kelakuanmuu, dahlah.
+            </p>
+            <p>
+                No 7, BUKU AKU NGGA DIBALIKIN WOII RAIS*LL, ARGHHH. CAPEK 
+                NULISNYA WOI. Ngeselin banget.
+            </p>
+            <p>
+                Udah cukup deh, aku mau istirahat dulu, + al-mulk.
+            </p>
         </div>
     </div>
 </body>
