--- a/html/043. Unpredictable (15-06-2024)/un.html
+++ b/html/043. Unpredictable (15-06-2024)/un.html
@@ -146,6 +146,13 @@
                 hasil foto barengnya bagus lagi, bikin makin kacau hati aja, 
                 arghhh.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Ahhh, aku mau buat kue lebaran dulu deh, kakakku udah pulang 
+                belanja.
+            </p>
         </div>
     </div>
 </body>
