--- a/html/044. Kupu-kupu (16-06-2024)/kupu-kupu.html
+++ b/html/044. Kupu-kupu (16-06-2024)/kupu-kupu.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="dahlah.mp4" autoplay controls loop></video>
+            <video src="kupu-kupu.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Kupu-kupu</h1>
@@ -18,7 +18,7 @@
             </p>
             <p>
                 Dari kemaren aku buat kue, sampe tadi siang belum siap. 
-                Bebeerapa macam sih. Cuman yang ngeselinnya, kak masyitah 
+                Beberapa macam sih. Cuman yang ngeselinnya, kak masyitah 
                 bukannya buat kue dari kemaren-kemaren, malah nunggu aku 
                 pulang dulu baru bikin. Kan jadinya repot, uroe makmeugang 
                 peugot kueh.
@@ -26,7 +26,7 @@
             <p>
                 Tadi siang aku buat kue bentuk kupu-kupu. Aku yang cetakin.
                 Setelahnya, aku diminta jagain oven. Ya terus aku diajak 
-                ngobrol, diminta ngupulin piring kotor dan cuciin juga, 
+                ngobrol, diminta ngumpulin piring kotor dan cuciin juga, 
                 jadinya aku lupa kalo aku lagi jaga oven. Dan tau-tau 
                 pas kakakku yang satu lagi liat, kuenya udah item gini, 
                 hahaha. Mau kabur rasanya. Untung aku ngga dimarahin.
