--- a/html/046. Start (23-06-2024)/start.html
+++ b/html/046. Start (23-06-2024)/start.html
@@ -61,6 +61,44 @@
                 aku lemes banget, suhu badan anget, kayak demam,
                 istirahat bentar kali ya, nanti aku cari buku.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Kenapaa bocilku berbedaa?
+            </p>
+            <p>
+                Kenapa bocil orang imut-imut sih. Sedangkan bocilku ngereok 
+                mulu. Ini namanya fatahillah, ponakan ke-3 aku. Yang paling 
+                gedek udah SMP, baru aja di sunat kamis kemaren. Yang kedua 
+                di rumah mantan kakak ipar, masuk SMP tahun ini, dan yang 
+                paling ke-4 yang lahir bulan lalu. 
+            </p>
+            <p>
+                Si Fatahillah ini tinggal di Geudong, rumah kakakku di sana. 
+                Cuman, karena kakakku lagi madeung, jadi lah pulang ke rumah 
+                aku. Udah mau 2 bulan di rumah. Ngeselin banget diaa. Aku 
+                lagi nulis, dia tiba-tiba rebut pulpen, aku lagi buka laptop 
+                dia tiba-tiba datang dan ambil, kadang di pencet-pencet 
+                keyboardnya, kadang aku kena tabok, mau tidur dia narik bantal, 
+                dan segala macam ketratruman, dia bener-bener ngeselin.
+            </p>
+            <p>
+                Semalam, kami dirumah lauknya ayam. Dia minta paha, adanya 
+                paha kuah dianya ngga mau yang kuah, jadilah aku goreng, udah 
+                aku siapin di piring pake nasi pula. Dianya malah ngamuk dan 
+                bilang jangan pake nasi, pake kecap ajaa. Dah, aku siapin 
+                dah pake kecap, masih aja salah dan dianya ngga mau. Ehh bocil, 
+                kenapa bocilku berbedaaa, ngga ada imut-imutnya kayak bocil 
+                oranggg. Dan entah kenapa warna kulit dia gelap banget, padahal 
+                keponakanku yang lain ngga segitunya, mata matanya gede, aku 
+                kalah kalo soal melotot wkwkwk.
+            </p>
+            <p>
+                Ya Allah, hamba request satu bocil cewek ya Allah, biar imut 
+                dan ngga ngeselin. Masak ponakan hamba cowok semua dan pada tatrum
+                sih, mohon bantuannya ya Allah. 
+            </p>
         </div>
     </div>
 </body>
