--- a/html/046. Start (23-06-2024)/start.html
+++ b/html/046. Start (23-06-2024)/start.html
@@ -99,6 +99,12 @@
                 dan ngga ngeselin. Masak ponakan hamba cowok semua dan pada tatrum
                 sih, mohon bantuannya ya Allah. 
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, suaraku cempreng banget ternyata hahaha. 
+            </p>
         </div>
     </div>
 </body>
