--- a/html/047. Cinta (23-06-2024)/cinta.html
+++ b/html/047. Cinta (23-06-2024)/cinta.html
@@ -78,6 +78,18 @@
                 serba kekurangan sekalipun. Tulus banget yah. Maasyaa Allah.
             </p>
             <p>
+                Aku punya satu kalimat reminder aku, dan mungkin suatu hari 
+                akan aku ajarin juga ke anak-anak di masa depan (wkkwwk 
+                insya Allah ya), kalimatnya aku nemu di tiktok, aku tulis 
+                deh biar ngga lupa, "Nak, jika ribuan tulang ibu patah 
+                saat melahirkanmu, maka ayahmu sedang menyembunyikan 
+                ribuan tulang patah juga setiap harinya untuk mencari 
+                rezeki dan selalu memastikan kita bahagia, baik-baik saja."
+                Allahumma baarik.
+                Sukaa banget sama quotesnya, udah aku save dari awal juni. 
+                Semoga ngga lupa, hehe.
+            </p>
+            <p>
                 ....
             </p>
             <p>
@@ -87,6 +99,9 @@
                 kepalaku makin sakit, hadehh nisaa. Ohh iya, besok aku 
                 mau ke kampus, semoga aku ngga makin sakit dan semoga 
                 dosennya ada besok, aamiinn ya Allah.
+            </p>
+            <p>
+                Dahlah, aku istirahat dulu. Bismillah, besok kuat.
             </p>
         </div>
     </div>
