--- a/html/047. Cinta (23-06-2024)/cinta.html
+++ b/html/047. Cinta (23-06-2024)/cinta.html
@@ -69,7 +69,7 @@
                 cinta dan kasih sayangnya padaku. Yah, ngga ada kasih sayang 
                 yang lebih tulus dan murni daripada kasih sayang orang tua 
                 pada anaknya, kurasa semua orang setuju dengan ini. Bahkan 
-                dari pasangan kita nanti sekalipun, tidak hubungan pasangan 
+                dari pasangan kita nanti sekalipun. Tidak, hubungan pasangan 
                 itu transaksional. Kita bisa aja ditinggalin pasangan karena 
                 ada kekurangan, misalkan kita gila, lelaki mana yang mau 
                 punya istri gila? Dan perempuan mana yang mau menampung 
