--- a/html/047. Cinta (23-06-2024)/cinta.html
+++ b/html/047. Cinta (23-06-2024)/cinta.html
@@ -34,7 +34,7 @@
                 Entah alasan apa yang bisa ku pakai untuk tidak menyayanginya. 
                 Kurasa itu? Tidak ada. Aku menyayanginya, kedua orangtuaku 
                 tanpa syarat dan kurasa tanpa akhir. Karena kamu tau? Sebagai 
-                anak, kita berakti kepada orang tua kita sampai kita tiada, 
+                anak, kita berbakti kepada orang tua kita sampai kita tiada, 
                 bukan sampai mereka tiada. Kalaupun suatu saat mereka mendahului 
                 kita menemui-Nya, kewajiban kita adalah berbakti kepada mereka. 
             </p>
