--- a/html/049. Amel si goodgirl (24-06-2024)/asg.html
+++ b/html/049. Amel si goodgirl (24-06-2024)/asg.html
@@ -127,6 +127,17 @@
                 ngga perlu CD.
                 Jadi, totalnya 5 CD.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Kenapa ya hidup orang terlihat gampang. Sehari langsung 
+                beres revisi, sementara aku uring-uringan hampir sebulan.
+                Dahlah, mungkin dia pinter dan aku oon. Atau dia dosennya 
+                cuek dan enak buat dijumpai. Emang rezeki anak sholeh. 
+                Laluu, kenapa aku tidak mendapat rezeki anak sholehah, 
+                hmmmm.
+            </p>
         </div>
     </div>
 </body>
