--- a/html/050. Waiting (25-06-2024)/wtg.html
+++ b/html/050. Waiting (25-06-2024)/wtg.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="strt.mp4" autoplay controls loop></video>
+            <video src="wtg.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Waiting!</h1>
@@ -32,6 +32,11 @@
                 paling kiri bangku ada Auli* hahaha. Yah, kan tiba-tiba 
                 dia duduk disitu. Tapi rasanya biasa aja. Ahhh aku selalu 
                 profesional kecuali sama anu, hmmm.
+            </p>
+            <p>
+                Orangnya udah pergi, wkwkwk. Ambil undangan semhas kayaknya 
+                deh ke adm, soalnya tadi juga banyak kating-kating yang 
+                ambil undangan, aku juga ketemu kak Run*.
             </p>
         </div>
     </div>
