--- a/html/051. HAHAHA (26-06-2024)/hahaha.html
+++ b/html/051. HAHAHA (26-06-2024)/hahaha.html
@@ -49,6 +49,16 @@
                 kali ya, hahaha.
             </p>
             <p>
+                Mana malam selanjutnya ujian hadist dan kami diminta hafalin 
+                lagii, aku belum hafal hadist 4. Arghhh ngeselin banget. Ini 
+                semua gara-gara santri lelaki, lemes amat mulutnya, ngapain 
+                lapor kalo kami ngga dikasih hadist khusus, kan jadinya malah 
+                abon yang milih. Coba kalo ngga ngasih tau malam ini, nanti 
+                aja pas malam hafalin, pasti ngga mungkin disuruh hafalin 
+                hadist suka-suka abon. Ahhh bodoamat, mending aku ngga ujian 
+                aja deh.
+            </p>
+            <p>
                 ...
             </p>
             <p>
